tests/error/errors_on_usage/if_different_types_coerce4.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool) -> float:
    y = 1 if x else 1.0
    return y
